# utxo-blockchain

./: .gitignore  Cargo.toml  blockchain.json
src/: lib.rs  main.rs
src/crypto/: hashing.rs  mod.rs  wallet.rs
src/models/: block.rs  blockchain.rs  chain_persistence.rs  chain_validation.rs  mod.rs  transaction.rs
src/network/: messages.rs  server.rs
