[package]
name = "utxo-blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
hex = "0.4.3"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
bincode = "1.3.0"
hmac = "0.12.1"
lazy_static = "1.5.0"
subtle = "2.6.1"
